[gd_scene load_steps=4 format=3 uid="uid://dwiu1ju7n7usy"]

[ext_resource type="Script" uid="uid://d3i6igf4mq5m0" path="res://scripts/components/interaction_component.gd" id="1_8b000"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_5by04"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8b000"]

[node name="InteractionComponent" type="Node3D"]
script = ExtResource("1_8b000")

[node name="InteractionHintArea" type="Area3D" parent="."]

[node name="InteractionHintAreaShape" type="CollisionShape3D" parent="InteractionHintArea"]
shape = SubResource("CylinderShape3D_5by04")

[node name="InteractionArea" type="Area3D" parent="."]

[node name="InteractionAreaShape" type="CollisionShape3D" parent="InteractionArea"]
shape = SubResource("CylinderShape3D_8b000")
